@@ -1,4 +1,4 @@
-; $Id: views.info,v 1.7.6.45 2010-11-07 11:32:25 dereine Exp $
+; $Id: views.info,v 1.7.6.46 2010-11-07 14:52:39 dereine Exp $
 name = Views
 description = Create customized lists and queries from your database.
 package = Views
@@ -298,4 +298,5 @@ files[] = tests/views_pager.test
 files[] = tests/views_query.test
 files[] = tests/views_test.views_default.inc
 files[] = tests/user/views_user_argument_default.test
+files[] = tests/user/views_user_argument_validate.test
 files[] = tests/views_cache.test
